--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <img src="images/project1.png" alt="Project 1" />
       <div>
         <h3>Amazon Ecommerce Data Analysis Report</h3>
-        <p>Short description of your project goes here.</p>
+        <p>Developed an interactive Power BI Report analyzing $822M sales from 1M+ SQLrecords,using a star schema model for optimal performance.Implemented 15+ DAX measures to track KPIs like average order value. Key insights included identifying top-performing products, optimizing Black Friday promotions, and reducing delivery delays by 15%. The solution cut reporting time by 30% through analytics and dynamic visualizations.</p>
         <a href="https://github.com/AniketRamgir/aniketramgir.github.io/tree/main/Projects/Power%20BI%20Projects/E-Commerce" target="_blank">View on GitHub</a>
       </div>
     </div>
@@ -29,16 +29,16 @@
       <img src="images/project2.png" alt="Project 2" />
       <div>
         <h3>Bank Customer Segmentation RFM and Loan Risk Analysis Report</h3>
-        <p>Short description of your project goes here.</p>
+        <p>This project showcases a comprehensive Power BI Report built to analyze customer behavior and loan risk for a simulated U.S. banking dataset. Using over 1 million transaction records and 100,000 customers across all 50 states, the report features a star schema data model and advanced DAX measures to deliver deep business insights. Key components include RFM-based customer segmentation, geo-mapping of loan default rates, and comparative performance analysis of loan products like Home, Auto, Personal, and Education loans. The Report is fully interactive, with slicers and KPIs designed to support strategic decision-making in financial services.</p>
         <a href="https://github.com/AniketRamgir/aniketramgir.github.io/tree/main/Projects/Power%20BI%20Projects/Banking" target="_blank">View on GitHub</a>
       </div>
     </div>
 
     <div class="project">
-      <img src="images/project3.png" alt="Project 3" />
+      <img src="images/project3.jpg" alt="Project 3" />
       <div>
-        <h3>Project 3 Title</h3>
-        <p>Short description of your project goes here.</p>
+        <h3>Decathlon Online Ecommerce Sports Apprel Data Analysis Using SQL</h3>
+        <p>Developed a comprehensive SQL analytics project on a sports apparel e-commerce dataset with over 1 million records. Performed data cleaning, transformation, and analysis using advanced SQL techniques including JOINs, subqueries, GROUP BY, and window functions. Extracted insights on customer behavior, sales performance, product trends, and return rates to support data-driven decisions.</p>
         <a href="https://github.com/AniketRamgir/aniketramgir.github.io/tree/main/Projects/SQL%20Projects/Decathlon%20Online%20Ecommerce%20Sports%20SQL%20Data%20Analysis" target="_blank">View on GitHub</a>
       </div>
     </div>
