3rdUpdates : 2nd April

--- a/index.html
+++ b/index.html
@@ -4,32 +4,56 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Aniket's Portfolio</title>
+  <title>Aniket Ramgir's Portfolio</title>
+    <link rel="icon" href="favicon.svg" type="image/svg+xml">
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
   <header>
     <h1>Aniket Ramgir</h1>
-    <p>Data Analyst | Power BI | Data Enthusiast</p>
+    <p>Data Analyst | Power BI | SQL | Python | Advanced Excel | Data Enthusiast</p>
   </header>
 
   <section class="projects">
     <h2>My Projects</h2>
     
     <div class="project">
-      <img src="images/project1.png" alt="Project 1" />
+      <img src="images/project1.jpg" alt="Project 1" />
       <div>
-        <h3>Amazon Ecommerce Data Analysis Report</h3>
-        <p>Developed an interactive Power BI Report analyzing $822M sales from 1M+ SQLrecords,using a star schema model for optimal performance.Implemented 15+ DAX measures to track KPIs like average order value. Key insights included identifying top-performing products, optimizing Black Friday promotions, and reducing delivery delays by 15%. The solution cut reporting time by 30% through analytics and dynamic visualizations.</p>
+        <h3>Ecommerce Sales Data Analysis Report</h3>
+        <ul>
+            <li> Architected a Star Schema Model in Power BI (Fact Sales + 7 Dimensions) by importing 1M+ records from SQL Server,
+                 ensuring a scalable framework for real-time sales, profit, and customer analytics. </li>
+            <li>Developed Interactive report of sales and profit trends insight with 15+ visuals tracking for $822 M Total Revenue,
+                $515M Profit, Top 5 Products, and Delivery Status, enabling cross-functional decision-making. </li>
+            <li>Engineered 20+ Advanced DAX Measures (AvgOrderValue, OneTimeCustomers, Profit, ProfitMargin%,
+                RepeatPurchaseRate) and dynamic Slicers for Date Ranges, Product Categories and States, reducing ad-hoc analysis  time by 30% </li>
+            <li> Uncovered Critical Insights: Top 5 Products contributed 40% of Revenue ($328M), identified New York as the highest
+                  revenue state ($82.19M), and reduced Delivery Delays by 15% through courier performance benchmarking. </li>
+            <li>Delivered Actionable Strategies for inventory optimization, targeted regional campaigns, and promotional planning,
+                improving Marketing ROI by 25% through data-backed Black Friday and Cyber Monday discount strategies. </li>
+        </ul>
         <a href="https://github.com/AniketRamgir/aniketramgir.github.io/tree/main/Projects/Power%20BI%20Projects/E-Commerce" target="_blank">View on GitHub</a>
       </div>
     </div>
 
     <div class="project">
-      <img src="images/project2.png" alt="Project 2" />
+      <img src="images/project2.jpg" alt="Project 2" />
       <div>
         <h3>Bank Customer Segmentation RFM and Loan Risk Analysis Report</h3>
-        <p>This project showcases a comprehensive Power BI Report built to analyze customer behavior and loan risk for a simulated U.S. banking dataset. Using over 1 million transaction records and 100,000 customers across all 50 states, the report features a star schema data model and advanced DAX measures to deliver deep business insights. Key components include RFM-based customer segmentation, geo-mapping of loan default rates, and comparative performance analysis of loan products like Home, Auto, Personal, and Education loans. The Report is fully interactive, with slicers and KPIs designed to support strategic decision-making in financial services.</p>
+        <ul>
+              <li>Architected a Star schema model in Power BI (Fact Loan + 6 dimensions) and imported 1M+ records from SQL Server
+                  to establish a scalable, high-performance data model for loan and customer analytics. </li>
+              <li>Developed Interactive Report for (RFM Analysis, Product Performance, Loan Risk, Customer Segmentation) with 20+
+                  visuals covering $163B loan portfolio, product mix, and Loan defaulter rate trends for enhanced decision-making.</li>
+              <li> Engineered 15+ advanced DAX measures (ex. RFM Score, Avg Recency, Defaulter Rate, Avg Interest, Outstanding
+                    Balance, etc.) and dynamic slicers to enable customer segmentation & risk scoring. </li>
+              <li>Uncovered high-impact insights: Champions segment comprises 54 % of customers (Avg Monetary $2.01 M), flagged
+                  75 K defaulted loans for targeted mitigation and revealed income-segment performance gaps.</li>
+              <li>Delivered data-driven results for prioritizing at-risk portfolios and informing targeted marketing campaigns by age
+                  group, income segment, marital status and job classification.</li>
+</ul>
+
         <a href="https://github.com/AniketRamgir/aniketramgir.github.io/tree/main/Projects/Power%20BI%20Projects/Banking" target="_blank">View on GitHub</a>
       </div>
     </div>
@@ -38,7 +62,12 @@
       <img src="images/project3.jpg" alt="Project 3" />
       <div>
         <h3>Decathlon Online Ecommerce Sports Apprel Data Analysis Using SQL</h3>
-        <p>Developed a comprehensive SQL analytics project on a sports apparel e-commerce dataset with over 1 million records. Performed data cleaning, transformation, and analysis using advanced SQL techniques including JOINs, subqueries, GROUP BY, and window functions. Extracted insights on customer behavior, sales performance, product trends, and return rates to support data-driven decisions.</p>
+         <ul>
+              <li>Leveraged 1M+ row MySQL database Dataset for an online sports apparel e-commerce company to simulate e-commerce operations, enabling realistic data analysis scenarios. </li>
+              <li> Cleaned and transformed raw customer, order, and product data using advanced SQL to ensure high data quality and consistency. </li>
+              <li>Developed analytical queries using JOINs, subqueries, GROUP BY, and window functions to uncover sales trends and product insights.</li>
+              <li>Generated actionable results on top categories, customer behavior, and return rates, supporting data-driven business decisions.</li>
+          </ul>
         <a href="https://github.com/AniketRamgir/aniketramgir.github.io/tree/main/Projects/SQL%20Projects/Decathlon%20Online%20Ecommerce%20Sports%20SQL%20Data%20Analysis" target="_blank">View on GitHub</a>
       </div>
     </div>
