Updates 4 : 2nd April

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
   <header>
     <h1>Aniket Ramgir</h1>
     <p>Data Analyst | Power BI | SQL | Python | Advanced Excel | Data Enthusiast</p>
+      <p>Proficient Power BI Developer & Data Analyst having 3 Years Experience in Data Analysis, Reporting & Business Intelligence
+            and Educational background in Computer Science Engineering (B.E). Expertise in Power BI, SQL, Python, and Advanced Excel.
+            Skilled at extracting insights, developing interactive dashboards and Reports and Passionate about leveraging data to solve
+            complex problems and contribute to business growth. </p>
   </header>
 
   <section class="projects">
@@ -20,7 +24,7 @@
     <div class="project">
       <img src="images/project1.jpg" alt="Project 1" />
       <div>
-        <h3>Ecommerce Sales Data Analysis Report</h3>
+        <h3>Ecommerce Amazon Sales Data Analysis Report</h3>
         <ul>
             <li> Architected a Star Schema Model in Power BI (Fact Sales + 7 Dimensions) by importing 1M+ records from SQL Server,
                  ensuring a scalable framework for real-time sales, profit, and customer analytics. </li>
@@ -40,7 +44,7 @@
     <div class="project">
       <img src="images/project2.jpg" alt="Project 2" />
       <div>
-        <h3>Bank Customer Segmentation RFM and Loan Risk Analysis Report</h3>
+        <h3> BFSI Customer Segmentation RFM and Loan Risk Analysis Report (Banking)</h3>
         <ul>
               <li>Architected a Star schema model in Power BI (Fact Loan + 6 dimensions) and imported 1M+ records from SQL Server
                   to establish a scalable, high-performance data model for loan and customer analytics. </li>
@@ -73,10 +77,15 @@
     </div>
 
     <div class="project">
-      <img src="images/project4.png" alt="Project 4" />
+      <img src="images/project4.jpg" alt="Project 4" />
       <div>
-        <h3>Project 4 Title</h3>
-        <p>Short description of your project goes here.</p>
+        <h3>Walmart Store Inventory Tracker Dashboard Using Advanced Excel (Retail)</h3>
+        <ul>
+              <li>Designed an interactive Walmart Inventory Dashboard in Excel using PivotTables, Charts, and Power Query to streamline real-time stock visibility for over 100,000 inventory records.</li>
+              <li>Developed 4 KPI metrics including Total Inventory Value, Low Stock, and Out-of-Stock Items using formulas like SUMPRODUCT, COUNTIFS, and COUNTA, helping identify restocking needs proactively. </li>
+              <li>Applied VLOOKUP across sheets to dynamically retrieve stock levels from the master table, ensuring consistency and traceability in calculations.</li>
+              <li>Utilized Conditional Formatting to flag critical inventory thresholds (e.g., stock below reorder level), enabling faster issue detection.</li>
+          </ul>
         <a href="https://github.com/yourusername/project4" target="_blank">View on GitHub</a>
       </div>
     </div>
