updates 4 : 2nd April

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <p>Proficient Power BI Developer & Data Analyst having 3 Years Experience in Data Analysis, Reporting & Business Intelligence
             and Educational background in Computer Science Engineering (B.E). Expertise in Power BI, SQL, Python, and Advanced Excel.
             Skilled at extracting insights, developing interactive dashboards and Reports and Passionate about leveraging data to solve
-            complex problems and contribute to business growth. </p>
+            complex problems.</p>
   </header>
 
   <section class="projects">
@@ -24,7 +24,7 @@
     <div class="project">
       <img src="images/project1.jpg" alt="Project 1" />
       <div>
-        <h3>Ecommerce Amazon Sales Data Analysis Report</h3>
+        <h3>Amazon Sales Data Analysis Report (Ecommerce)</h3>
         <ul>
             <li> Architected a Star Schema Model in Power BI (Fact Sales + 7 Dimensions) by importing 1M+ records from SQL Server,
                  ensuring a scalable framework for real-time sales, profit, and customer analytics. </li>
@@ -86,7 +86,7 @@
               <li>Applied VLOOKUP across sheets to dynamically retrieve stock levels from the master table, ensuring consistency and traceability in calculations.</li>
               <li>Utilized Conditional Formatting to flag critical inventory thresholds (e.g., stock below reorder level), enabling faster issue detection.</li>
           </ul>
-        <a href="https://github.com/yourusername/project4" target="_blank">View on GitHub</a>
+        <a href="https://github.com/AniketRamgir/aniketramgir.github.io/tree/main/Projects/Advanced%20Excel%20Projects" target="_blank">View on GitHub</a>
       </div>
     </div>
   </section>
