updates 2nd : 4th April

--- a/index.html
+++ b/index.html
@@ -28,12 +28,20 @@
         <ul>
             <li> Architected a Star Schema Model in Power BI (Fact Sales + 7 Dimensions) by importing 1M+ records from SQL Server,
                  ensuring a scalable framework for real-time sales, profit, and customer analytics. </li>
-            <li>Developed Interactive report of sales and profit trends insight with 15+ visuals tracking for $822 M Total Revenue,
-                $515M Profit, Top 5 Products, and Delivery Status, enabling cross-functional decision-making. </li>
+            <li> Developed an interactive PowerBI report featuring 15+ visuals including KPI cards, line charts, waterfall charts, bar
+                    charts, table with conditional formatting, map visuals, and Top10 Products charts to track $822M Total Revenue,
+                    $637M Profit and Profit Margin:63.71%, empowering cross-functional stakeholders with on-demand insights.  </li>
             <li>Engineered 20+ Advanced DAX Measures (AvgOrderValue, OneTimeCustomers, Profit, ProfitMargin%,
                 RepeatPurchaseRate) and dynamic Slicers for Date Ranges, Product Categories and States, reducing ad-hoc analysis  time by 30% </li>
-            <li> Uncovered Critical Insights: Top 5 Products contributed 40% of Revenue ($328M), identified New York as the highest
-                  revenue state ($82.19M), and reduced Delivery Delays by 15% through courier performance benchmarking. </li>
+            <li> Uncovered Critical Insights:  Profit Trend analysis across key categories, revealing Electronics profit growth from
+                $230M in 2023 to $407M in 2024, driving reallocation of resources toward high-growth segments.   </li>
+            <li>Constructed a Monthly Sales Trend visual, highlighting peak revenue months (e.g., December:$500M, July:$450M),
+                which informed the timing of major promotions. </li>
+            <li> Implemented Total Sales Forecast up to 2026 (projecting $1B+ in sales), supporting strategic planning and budget
+                allocation with data-driven projections. </li>
+            <li>Implemented dynamic Row-Level Security (RLS) in Power BI to restrict user access based on customer region and
+                product category, ensuring secure data segmentation for regional managers and category owners, resulting in
+                improved data governance and compliance. </li>
             <li>Delivered Actionable Strategies for inventory optimization, targeted regional campaigns, and promotional planning,
                 improving Marketing ROI by 25% through data-backed Black Friday and Cyber Monday discount strategies. </li>
         </ul>
