--- a/index.html
+++ b/index.html
@@ -11,11 +11,7 @@
 <body>
   <header>
     <h1>Aniket Ramgir</h1>
-    <p>Data Analyst | Power BI | SQL | Python | Advanced Excel | Data Enthusiast</p>
-      <p>Proficient Power BI Developer & Data Analyst having 3 Years Experience in Data Analysis, Reporting & Business Intelligence
-            and Educational background in Computer Science Engineering (B.E). Expertise in Power BI, SQL, Python, and Advanced Excel.
-            Skilled at extracting insights, developing interactive dashboards and Reports and Passionate about leveraging data to solve
-            complex problems.</p>
+    <p>Data Analyst | Microsoft Power BI | SQL | Python | Advanced Microsoft Excel | Data Enthusiast</p>
   </header>
 
   <section class="projects">
