--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <img src="images/project1.jpg" alt="Project 1" />
       <div>
         <h3>Amazon Sales Data Analysis Report (Ecommerce)</h3>
+        <iframe title="Abank Report" width="1140" height="541.25" src="https://app.powerbi.com/reportEmbed?reportId=c4fdd2a6-1050-4036-a119-eab1604d0805&appId=7d9a4c90-3321-4f32-9d50-5e5dcc4fa874&autoAuth=true&ctid=917aa155-411f-4e6c-8a5d-5de71287bc0c" frameborder="0" allowFullScreen="true"></iframe>
         <ul>
             <li> Architected a Star Schema Model in Power BI (Fact Sales + 7 Dimensions) by importing 1M+ records from SQL Server,
                  ensuring a scalable framework for real-time sales, profit, and customer analytics. </li>
